; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-imx-gpt.c_imx1_gpt_irq_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-imx-gpt.c_imx1_gpt_irq_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_timer = type { i64 }

@MXC_TCTL = common dso_local global i64 0, align 8
@MX1_2_TCTL_IRQEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imx_timer*)* @imx1_gpt_irq_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx1_gpt_irq_disable(%struct.imx_timer* %0) #0 {
  %2 = alloca %struct.imx_timer*, align 8
  %3 = alloca i32, align 4
  store %struct.imx_timer* %0, %struct.imx_timer** %2, align 8
  %4 = load %struct.imx_timer*, %struct.imx_timer** %2, align 8
  %5 = getelementptr inbounds %struct.imx_timer, %struct.imx_timer* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @MXC_TCTL, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @readl_relaxed(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @MX1_2_TCTL_IRQEN, align 4
  %12 = xor i32 %11, -1
  %13 = and i32 %10, %12
  %14 = load %struct.imx_timer*, %struct.imx_timer** %2, align 8
  %15 = getelementptr inbounds %struct.imx_timer, %struct.imx_timer* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @MXC_TCTL, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @writel_relaxed(i32 %13, i64 %18)
  ret void
}

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
